@@ -256,5 +256,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-flat {
   text-shadow: none;
   box-shadow: none;
+}
+
+.btn-borderless {
   border: none;
 }
