@@ -6,10 +6,10 @@
             <h4>Fill Murray</h4>
 
             <div class="user-links">
-                <a class="btn btn-link btn-flat btn-xs" href="#" data-placement="bottom" data-toggle="tooltip" data-original-title="Profile"><i class="fa fa-user"></i></a>
-                <a class="btn btn-link btn-flat btn-xs" href="#" data-placement="bottom" data-toggle="tooltip" data-original-title="Messages"><i class="fa fa-envelope"></i></a>
-                <a class="btn btn-link btn-flat btn-xs" href="#" data-placement="bottom" data-toggle="tooltip" data-original-title="Settings"><i class="fa fa-cog"></i></a>
-                <a class="btn btn-link btn-flat btn-xs" href="#" data-placement="bottom" data-toggle="tooltip" data-original-title="Logout"><i class="fa fa-sign-out"></i></a>
+                <a class="btn btn-link btn-flat btn-xs btn-borderless" href="#" data-placement="bottom" data-toggle="tooltip" data-original-title="Profile"><i class="fa fa-user"></i></a>
+                <a class="btn btn-link btn-flat btn-xs btn-borderless" href="#" data-placement="bottom" data-toggle="tooltip" data-original-title="Messages"><i class="fa fa-envelope"></i></a>
+                <a class="btn btn-link btn-flat btn-xs btn-borderless" href="#" data-placement="bottom" data-toggle="tooltip" data-original-title="Settings"><i class="fa fa-cog"></i></a>
+                <a class="btn btn-link btn-flat btn-xs btn-borderless" href="#" data-placement="bottom" data-toggle="tooltip" data-original-title="Logout"><i class="fa fa-sign-out"></i></a>
             </div>
         </div>
     </div>
