@@ -1,5 +1,51 @@
-<div class="jumbotron">
-    <h1>Ives Kitchen Sink</h1>
-    <p>A quick preview of everything Ives has to offer.</p>
-    <p><a class="btn btn-outline-primary btn-lg">Learn more &raquo;</a></p>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Jumbotron Header with Subtitle</h3>
   </div>
+  <div class="panel-body">
+    <div class="jumbotron text-blue-50 cover-image" style="background-image: url(<%=asset_path(random_landscape_name) %>);">
+      <div class="cover-content">
+        <p class="subtitle">Ives Help Desk</p>
+        <h1>Managing Memory Bloat in Ruby Processes</h1>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Cover Image Jumbotron</h3>
+  </div>
+  <div class="panel-body">
+    <div class="jumbotron blue-800 text-blue-50 cover-image" style="background-image: url(<%=asset_path(random_landscape_name) %>);">
+      <div class="cover-content">
+        <h1>Ives Kitchen Sink</h1>
+        <p>A quick preview of everything Ives has to offer.</p>
+        <p><a class="btn btn-outline-primary btn-lg btn-flat">Learn more &raquo;</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Block color Jumbotron</h3>
+  </div>
+  <div class="panel-body">
+    <div class="jumbotron blue-800 text-blue-50">
+      <p class="subtitle">Ives Help Desk</p>
+      <h1>Managing Memory Bloat in Ruby Processes</h1>
+    </div>
+  </div>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Standard Jumbotron</h3>
+  </div>
+  <div class="panel-body">
+    <div class="jumbotron">
+      <h1>Ives Kitchen Sink</h1>
+      <p>A quick preview of everything Ives has to offer.</p>
+      <p><a class="btn btn-outline-primary btn-lg">Learn more &raquo;</a></p>
+    </div>
+  </div>
+</div>
+
