@@ -1,3 +1,7 @@
+# RC.25
+ - Added .btn-borderless
+ - Added addtional Jumbotrons
+
 # RC.24
  - Responsive blog refinements
 
